feat: adds a reference back to `Subject` from `Sample`
